--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body{
     background-color: white;
     margin: 4.5rem 1.5rem;
     border-radius: 10px;
+    box-shadow: 5px 2px 30px rgba(0, 0, 0, 0.1);
     
 }
 .main__drawers{
